fixed hero painbrush end on mobile

--- a/_sass/modules/_hero.scss
+++ b/_sass/modules/_hero.scss
@@ -1,15 +1,12 @@
 .hero {
 	position: relative;
+  margin-bottom: $spacing-m + $spacing-base;
 
-  @media #{$tablet-breakpoint} {
+  @media #{$small-mobile-breakpoint} {
     margin-bottom: $spacing-base;
   }
 
-  @media #{$small-desktop-breakpoint} {
-    margin-bottom: $spacing-m;
-  }
-
-  @media #{$large-desktop-breakpoint} {
+  @media #{$tablet-breakpoint} {
     margin-bottom: $spacing-l;
   }
 
@@ -23,8 +20,7 @@
     background: url('../images/hero-section-brush.png') no-repeat center top/cover;
 
     @media #{$small-mobile-breakpoint} {
-      height: 90px;
-      padding-bottom: 0;
+      padding-bottom: 15%;
     }
   }
 }
